--- a/Project_3/templates/index.html
+++ b/Project_3/templates/index.html
@@ -54,7 +54,7 @@
         <div class="box">
           <h3 class="title">Can Athletics Really Affect College Admissions?</h3>
           <hr>
-          <img src="Resources/assets/images/Doug-Flutie.jpg" class="vizualization rounded float-left"
+          <img src="../Resources/images/Doug-Flutie.jpg" class="vizualization rounded float-left"
             alt="Doug Fultie hail Mary">
           <p>In 1984, Boston College's Doug Flutie threw a game winning Hail Mary aginast powerhouse Miami to put a wild end to an underdog story.
              This last second desperation attempt is thought to be one of the greatest unintentional marketing moments of all time.</p>
