--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
   <!--CSS Link-->
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="static/style.css">
 
 </head>
 
@@ -41,9 +41,13 @@
               Our Findings
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="max_temperature.html">Machine Learning</a>
-              <a class="dropdown-item" href="humidity.html">Tableau</a>
-              <a class="dropdown-item" href="cloudiness.html">Data</a>
+              <a class="dropdown-item" href="mL.html">Machine Learning</a>
+              <a class="dropdown-item" href="Tableau.html">Tableau</a>
+              <a class="dropdown-item" href="data.html">Data</a>
+            </li>
+            <p>
+                Group 11
+            </p>              
     </nav>
   </div>
   <!-- Content Section -->
@@ -54,7 +58,7 @@
         <div class="box">
           <h3 class="title">Can Athletics Really Affect College Admissions?</h3>
           <hr>
-          <img src="../Resources/images/Doug-Flutie.jpg" class="vizualization rounded float-left"
+          <img src="../Resources/images/Doug-Flutie.jpg" class="vizualization rounded float"
             alt="Doug Fultie hail Mary">
           <p>In 1984, Boston College's Doug Flutie threw a game winning Hail Mary aginast powerhouse Miami to put a wild end to an underdog story.
              This last second desperation attempt is thought to be one of the greatest unintentional marketing moments of all time.</p>
@@ -73,21 +77,21 @@
           <div class="container">
             <div class="row" style="padding-bottom: 30px;">
               <div class="col-6">
-                <a href="max_temperature.html">
-                  <img class="panel" src="" alt="Machine Learning">
+                <a href="mL.html">
+                  Machine Learning
                 </a>
               </div>
               <div class="col-6">
-                <a href="humidity.html">
-                  <img class="panel" src="" alt="Tableau">
+                <a href="Tableau.html">
+                  Tableau
                 </a>
               </div>
             </div>
 
             <div class="row" style="padding-bottom: 30px;">
               <div class="col-6">
-                <a href="cloudiness.html">
-                  <img class="panel" src=""" alt="Data">
+                <a href="data.html">
+                  Data
                 </a>
 
             </div>
