--- a/templates/mL.html
+++ b/templates/mL.html
@@ -63,11 +63,12 @@
       <div class="col-lg-20 col-md-100">
         <!-- Left box  -->
         <div class="box">
-          <h3 class="title">Total Expenses v. Total Revenue</h3>
+          <h3 class="title">Machine Learning Analysis</h3>
           <hr>
-            <p>The following chart shows us a basic prediction of how much schools should spend to make x amount for various program sizes.</p>
             <br>
-
+            <hr>
+            <p><b>Total Expenses v. Total Revenue</b></p>
+            <br>
           <img src="../Resources/images/machinelearning.png" alt="mL">
           <p>In our analysis we wanted to look at what it takes to create a successful Division 1 football
             program. On our x axis we have the expenses by team and their resulting revenue on the y axis.
@@ -80,5 +81,21 @@
             when looking at all 130 Division 1 football programs, we know extra spending does not always guarantee
             success. While their are other factors that can impact the success of a team we believe that colleges
             that spend around 80 million on their football programs get the best return.</p>
+
+            <hr>
+            <p><b>Profit v. Total Expenditures</b></p>
+            <br>
+          <img src="../Resources/images/mL2.png" alt="mL2">
+          <p>Secondly, we look a look at profits based on total football expeditures. Again most Divison 1 schools
+              are spending less than $60 million a year and breaking even. The data is very inconclusive as colleges 
+              increase spending. Since high spending does not guarantee success it is hard to predict the just how much 
+              colleges should expect in return. Many things like injury or lack of attendance can easily impact profits.</p>
+            
+              <hr>
+              <p><b>Limitations</b></p>
+              <br>
+            <img src="../Resources/images/mL3.png" alt="mL3">
+            <p>
+            
         </div>
       </div>
