moving files around for heroku

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -30,7 +30,7 @@ body{
     background-color:#bebebe !important; 
 }
 a{
-    color: #fff;
+    color: black;
     font-size: 15px; 
 }
 .nav-link:hover{
