--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
   <!--CSS Link-->
-  <link rel="stylesheet" type="text/css" href="static/style.css">
+  <link rel="stylesheet" type="text/css" href="/static/css/style.css">
 
 </head>
 
@@ -58,7 +58,7 @@
         <div class="box">
           <h3 class="title">Can Athletics Really Affect College Admissions?</h3>
           <hr>
-          <img src="../Resources/images/Doug-Flutie.jpg" class="vizualization rounded float"
+          <img src="/static/img/Doug-Flutie.jpg" class="vizualization rounded float"
             alt="Doug Fultie hail Mary">
           <p>In 1984, Boston College's Doug Flutie threw a game winning Hail Mary aginast powerhouse Miami to put a wild end to an underdog story.
              This last second desperation attempt is thought to be one of the greatest unintentional marketing moments of all time.</p>
