moving files around for heroku

--- a/templates/Tableau/index.html
+++ b/templates/Tableau/index.html
@@ -45,9 +45,9 @@
                             Our Findings 
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="mL.html">Machine Learning</a>
-                            <a class="dropdown-item" href="Tableau.html">Tableau</a>
-                            <a class="dropdown-item" href="index.html">Home</a>
+                            <a class="dropdown-item" href="/mL">Machine Learning</a>
+                            <a class="dropdown-item" href="/Tableau">Tableau</a>
+                            <a class="dropdown-item" href="/index">Home</a>
                         </div>
                     </li>
                     <p>
