--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
   <!-- Navigation Section -->
   <div class="navigation">
     <nav class="navbar navbar-expand-lg navbar-light">
-      <a class="navbar-brand" href="index.html">The Flutie Effect</a>
+      <a class="navbar-brand" href="/">The Flutie Effect</a>
       <button class="navbar-toggler  border border-white" type="button" data-toggle="collapse"
         data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
         aria-label="Toggle navigation">
@@ -41,9 +41,9 @@
               Our Findings
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="mL.html">Machine Learning</a>
-              <a class="dropdown-item" href="Tableau.html">Tableau</a>
-              <a class="dropdown-item" href="data.html">Data</a>
+              <a class="dropdown-item" href="/mL">Machine Learning</a>
+              <a class="dropdown-item" href="/Tableau">Tableau</a>
+              <a class="dropdown-item" href="/data">Data</a>
             </li>
             <p>
                 Group 11
@@ -77,12 +77,12 @@
           <div class="container">
             <div class="row" style="padding-bottom: 30px;">
               <div class="col-6">
-                <a href="mL.html">
+                <a href="/mL">
                   Machine Learning
                 </a>
               </div>
               <div class="col-6">
-                <a href="Tableau.html">
+                <a href="/Tableau">
                   Tableau
                 </a>
               </div>
@@ -90,7 +90,7 @@
 
             <div class="row" style="padding-bottom: 30px;">
               <div class="col-6">
-                <a href="data.html">
+                <a href="/data">
                   Data
                 </a>
 
