--- a/templates/mL/index.html
+++ b/templates/mL/index.html
@@ -31,7 +31,7 @@
     <!-- Navigation Section -->
     <div class="navigation">
         <nav class="navbar navbar-expand-lg navbar-light">
-            <a class="navbar-brand";" href="index.html">The Flutie Effect</a>
+            <a class="navbar-brand";" href="/">The Flutie Effect</a>
             <button class="navbar-toggler border border-white" type="button" data-toggle="collapse"
                 data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -45,9 +45,9 @@
                             Our Findings 
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="mL.html">Machine Learning</a>
+                            <a class="dropdown-item" href="/mL">Machine Learning</a>
                             <a class="dropdown-item" href="Tableau.html">Tableau</a>
-                            <a class="dropdown-item" href="index.html">Home</a>
+                            <a class="dropdown-item" href="/">Home</a>
                         </div>
                     </li>
                     <p>
