fixing html calls

--- a/templates/mL/index.html
+++ b/templates/mL/index.html
@@ -46,7 +46,7 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <a class="dropdown-item" href="/mL">Machine Learning</a>
-                            <a class="dropdown-item" href="Tableau.html">Tableau</a>
+                            <a class="dropdown-item" href="/Tableau">Tableau</a>
                             <a class="dropdown-item" href="/">Home</a>
                         </div>
                     </li>
@@ -69,7 +69,7 @@
             <hr>
             <p><b>Total Expenses v. Total Revenue</b></p>
             <br>
-          <img src="../Resources/images/linearity.png" alt="mL">
+          <img src="/static/img/linearity.png" alt="mL">
           <p>In our analysis we wanted to look at what it takes to create a profitible Division 1 football
             program. We began our analysis by creating a simple scatter plot to prove linearity before moving on and creating the model.
             This is an important step in determining which kind of model to use. Since we see a clear linear relationship
@@ -79,7 +79,7 @@
             <hr>
             <p><b>Profit v. Total Expenditures</b></p>
             <br>
-          <img src="../Resources/images/predicted_profit.png" alt="mL2">
+          <img src="/static/img/predicted_profit.png" alt="mL2">
           <p>Secondly, we look a look at potential profits based on total football expeditures. Again most Divison 1 schools
             are spending less than $60 million a year and breaking even. This was an interesting outcome because in our research most of our 
             recognizable Power 5 Division 1 schools are spending well above 110 million to finance their programs. While they might be an anomaly
@@ -92,7 +92,7 @@
               <hr>
               <p><b>Limitations</b></p>
               <br>
-            <img src="../Resources/images/multi_plot.png" alt="mL3">
+            <img src="/static/img/multi_plot.png" alt="mL3">
             <p> When we began our data exploration and initial modeling, we wanted to try to find the "sweet spot" for expenditure and cash inflows
                 from various sources. We were fortunate enough to find an excellent dataset that gave us the breakdown of all major categories of inflows
                 and outflows, and we wanted to predict where a team would be if they stayed on their current path, made a significant investment in the team,
